app/assets/stylesheets/white_theme/comments.scss
// Sorta sketchy to write something this obscure, probably the HTML could be changed
h2#latest_comments + div.box {
  background-color: transparent;
  .asset {
    background-color: #FFFFFF;
    border-bottom:0;
  }
}


.comment {
  position: relative;
  margin-bottom: $baseline;
  padding: $baseline;
  padding-top: 10px;
  background-color: $samo-gray;
  @include samo-shadow-and-radius();
  margin: 0 10px;
  &:last-child {
    border-bottom: 0;
  }
  div.private_comment {
    position: absolute;
    z-index: 4;
    top: 51px;
    left: -4px;
    width: 25px;
    height: 25px;
    background: image-url('icons/private.png') no-repeat top left;
  }
  .comment_user {
    position: absolute;
    a.alonetoner,
    img {
      float: left;
      width: 40px;
      height: 40px;
      margin-top: 1px;
      margin-right: 10px;
    }
  }
  .comment_user_text {
    font-size: 12px;
    font-weight: normal;
    padding-top: 30px;
    margin-left: 54px;
    a,
    a:visited {
      font-size: 12px;
      font-weight: bold;
      text-decoration: underline;
    }
  }
  .comment_body {
    font-family: $serif-font;
    p {
      line-height: 18px;
      margin: 16px 0 0 0;
      margin-top: 13px;
    }
    .comment_controls {
      font-weight: normal;
      float: right;
      margin-top: 15px;
      a {
        @include default_button('admin');
      }
    }
    h1,
    h2,
    h3 {
      font-size: 16px;
      font-weight: bold;
      margin-top: 32px;
      margin-bottom: 12px;
    }
  }
}


// I guess this appears in the blog/features maybe nowhere else, i want to move this to tracks!!!

